[package]
name = "toggl_to_timeular"
version = "0.1.0"
edition = "2021"
description = "Migrate time entries from Toggl Track to Timeular"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
chrono-tz = "0.8.6"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.2"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
